Updated portfolio content and fixed project card spacing

--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,6 @@ profile-photo .img{
 .profile-text .social i{
   color : #e5e5e5;
   font-size: 18px;
-  margin-right: 10px;
   transition: 0.5s;
 }
 .profile-text .social i:hover{
@@ -373,7 +372,8 @@ profile-photo .img{
   margin: 20px 0;
 }
 .project p{
-  text-align: justify;
+  text-align: left;
+  line-height: 1.7;
 }
 .project:hover{
   border-color: #fed700;
